--- a/public/admin.html
+++ b/public/admin.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+        <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:16px;">
+            <div></div>
+            <a href="/"><button>Главное меню</button></a>
+        </div>
     <h1>Управление животными</h1>
 
     <form id="animalForm">
